fixed authentication matching issues and null role check